# product_cost

./: .test.env  Dockerfile  README.md  compose.yaml  pyproject.toml
.deploy/: start.sh
alembic/: env.py
alembic/versions/: 994e6f42fc34_add_calc_results.py
src/: main.py  settings.py
src/api/: calc.py
src/clients/: db.py
src/db/: __init__.py  calc_result.py
src/schemas/: calc.py
src/services/: calc.py
tests/: conftest.py  test_calc.py
