[tool.poetry]
name = "product-cost"
version = "0.1.0"
description = ""
authors = ["psystrafer <pavel.cvirko@triafly.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = {extras = ["standard"], version = "^0.121.2"}
asyncpg = "^0.30.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.44"}
pydantic-settings = "^2.12.0"
alembic = "^1.17.2"
pytest = "^9.0.1"
pytest-asyncio = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode="auto"